<resources>
    <string name="app_name">C-Schedule</string>
    <string name="trans_logo">transition_logo</string>
    <string name="trans_app_name">transition_app_name</string>
    <string name="send">SEND</string>
    <string name="edit_message">enter a message…</string>
    <string name="login">Login</string>
    <string name="sign_up">No account yet? <u>Sign Up</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? <u>Login</u></string>
</resources>
